ADD: Estilos agregados

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>Ejercicio_5</title>
 <!-- write your code here -->
+<link href="css/style.css" rel="stylesheet" type="text/css"/>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="Ejercicio_5.js?1660757543572"></script>
 <script>
